syntax = "proto3";

package com.snapchat.proto.gallery.servlet;

import "com/snapchat/proto/SCPBCoordinate.proto";
import "com/snapchat/proto/gallery/SCPBGallerySnapSource.proto";
import "com/snapchat/proto/SCPBStoryFrame.proto";
import "com/snapchat/proto/gallery/SCPBGalleryMultiSnapSegment.proto";
import "com/snapchat/proto/gallery/servlet/SCPBGalleryServletSensorBlob.proto";
import "com/snapchat/proto/gallery/SCPBGalleryToolVersion.proto";
import "com/snapchat/proto/gallery/SCPBGalleryMediaAttribute.proto";
import "com/snapchat/proto/gallery/servlet/snap_assets/SCPBGalleryServletSnapAssetsGallerySnapAsset.proto";

message SCPBGalleryServletGallerySnap {
	string snapId = 1;
	bool defunct = 2;
	string mediaId = 3;
	string encryption = 4;
	int32 mediaType = 5;
	string overlay = 6;
	int64 createTime = 7;
	int32 orientation = 8;
	int32 overlayOrientation = 9;
	com.snapchat.proto.SCPBCoordinate location = 10;
	string timeZone = 11;
	double temperature = 12;
	double speed = 13;
	double battery = 14;
	int32 width = 15;
	int32 height = 16;
	double duration = 17;
	int64 size = 18;
	string mediaDownloadURL = 19;
	string hdMediaDownloadURL = 20;
	int32 hdMediaStatus = 21;
	string overlayDownloadURL = 22;
	bool hasOverlayImage = 23;
	string thumbnailDownloadURL = 24;
	bool hasThumbnail = 25;
	string tags = 26;
	int32 tagsVersion = 27;
	int32 cameraHardwareMountingDegrees = 28;
	bool cameraFrontFacing = 29;
	com.snapchat.proto.gallery.SCPBGallerySnapSource source = 30;
	com.snapchat.proto.SCPBStoryFrame framing = 31;
	int32 statusCode = 32;
	double contentScore = 33;
	string deviceId = 34;
	bool isInfiniteDuration = 35;
	string miniThumbnailBytes = 36;
	string thumbnailRedirectURL = 37;
	bool infiniteDuration = 38;
	string thumbnailRedirectUri = 39;
	string overlayRedirectUri = 40;
	string mediaRedirectUri = 41;
	string hdMediaRedirectUri = 42;
	bool gzippedOverlay = 43;
	int64 thumbnailSize = 44;
	int64 overlayImageSize = 45;
	int64 hdMediaSize = 46;
	int64 captureTime = 47;
	string mediaFormat = 48;
	com.snapchat.proto.gallery.SCPBGalleryMultiSnapSegment multiSnapSegment = 49;
	string multiSnapGroupId = 50;
	com.snapchat.proto.gallery.servlet.SCPBGalleryServletSensorBlob sensorBlob = 51;
	repeated com.snapchat.proto.gallery.SCPBGalleryToolVersion toolVersionsArray = 52;
	string spectaclesMetadataURL = 53;
	bool hasSpectaclesMetadata = 54;
	string spectaclesMetadataRedirectUri = 55;
	bool hasDepthEffect = 56;
	repeated com.snapchat.proto.gallery.SCPBGalleryMediaAttribute mediaAttributesArray = 57;
	string spectaclesSecondaryMetadataURL = 58;
	bool hasSpectaclesSecondaryMetadata = 59;
	string spectaclesSecondaryMetadataRedirectUri = 60;
	repeated com.snapchat.proto.gallery.servlet.snap_assets.SCPBGalleryServletSnapAssetsGallerySnapAsset snapAssetsArray = 61;
	repeated string assetsArray = 62;
	string thumbnailDirectDownloadURL = 63;
	string overlayDirectDownloadURL = 64;
	string mediaDirectDownloadURL = 65;
	bytes snapDoc = 66;
	string snapDocString = 67;
	string externalMetadata = 68;
}
