syntax = "proto3";
package snapchat.snapdoc;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SDM";
option csharp_namespace = "SnapProto.Snapchat.Snapdoc";

import "google/protobuf/empty.proto";

message SDMPlaybackCharacteristics {
    bool hasSound = 5;
    repeated int64 seekPointsMsArray = 9;
    repeated .snapchat.snapdoc.SDMSeekPointMetadata seekPointsMetadataArray = 10;
    .google.protobuf.Empty infinite = 6;
    .google.protobuf.Empty playOnce = 7;
    uint32 durationSeconds = 8;
}

message SDMSeekPointMetadata {
    int64 chapterId = 1;
}